-fixed scrollbar and small fixes

--- a/src/app/filter/filter.component.css
+++ b/src/app/filter/filter.component.css
@@ -10,7 +10,13 @@
   width: 80%;
   gap: 1rem;
   align-items: center;
-  justify-content: center;
+  overflow-y: hidden;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+}
+
+.scrollItems{
+  scroll-snap-align: start;
 }
 
 button{
